# oss-issue-fixer-agent

./: .env.example  .gitignore  README.md  pyproject.toml
config/: repos.yaml
src/oss_issue_fixer/: agent.py  cli.py  config.py  contrib_rules.py  git_ops.py  github_api.py  models.py  quality.py  scheduler.py
src/oss_issue_fixer/plugins/: stub_fixer.py
tests/: test_config.py
